# fastapi-production-ready

./: .env  Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml
app/: main.py  settings.py
tests/: test_status.py
